add_executable(run_test_1 test_1.cc ../1_two_sum/Solution1.cc)
add_executable(run_test_2 test_2.cc ../2_add2numbers/Solution2.cc)
add_executable(run_test_3 test_3.cc ../3_longest_substring/Solution3.cc)
add_executable(run_test_4 test_4.cc ../4_median_two_sorted_arrays/Solution4.cc)
add_executable(run_test_5 test_5.cc ../5_longest_palindromic_substring/Solution5.cc)
add_executable(run_test_5_dp test_5_dp.cc ../5_longest_palindromic_substring/Solution5_dp.cc)
add_executable(run_test_6 test_6.cc ../6_zigzag_conversion/Solution6.cc)
add_executable(run_test_7 test_7.cc ../7_reverse_integer/Solution7.cc)
add_executable(run_test_8 test_8.cc ../8_string_to_integer/Solution8.cc)
add_executable(run_test_9 test_9.cc ../9_palindrome_number/Solution9.cc)
add_executable(run_test_10 test_10.cc ../10_regular_expression_matching/Solution10.cc)
add_executable(run_test_11 test_11.cc ../11_container_with_most_water/Solution11.cc)
add_executable(run_test_12 test_12.cc ../12_integer_to_roman/Solution12.cc)
add_executable(run_test_13 test_13.cc ../13_roman_to_integer/Solution13.cc)
add_executable(run_test_14 test_14.cc ../14_longest_common_prefix/Solution14.cc)
add_executable(run_test_15 test_15.cc ../15_three_sum/Solution15.cc)
add_executable(run_test_16 test_16.cc ../16_three_sum_closest/Solution16.cc)
add_executable(run_test_17 test_17.cc ../17_letter_combine_of_phone_number/Solution17.cc)
add_executable(run_test_18 test_18.cc ../18_four_sum/Solution18.cc)
add_executable(run_test_19 test_19.cc ../19_rm_nth_node_from_end/Solution19.cc)
add_executable(run_test_20 test_20.cc ../20_valid_parentheses/Solution20.cc)
add_executable(run_test_21 test_21.cc ../21_merge_two_sorted_lists/Solution21.cc)
add_executable(run_test_22 test_22.cc ../22_generate_parentheses/Solution22.cc)
add_executable(run_test_23 test_23.cc ../23_merge_k_sorted_lists/Solution23.cc)
add_executable(run_test_24 test_24.cc ../24_swap_nodes_in_pairs/Solution24.cc)
add_executable(run_test_25 test_25.cc ../25_reverse_nodes_in_k_groups/Solution25.cc)
add_executable(run_test_26 test_26.cc ../26_remove_duplicates/Solution26.cc)
add_executable(run_test_27 test_27.cc ../27_remove_element/Solution27.cc)
add_executable(run_test_28 test_28.cc ../28_implement_strstr/Solution28.cc)
add_executable(run_test_29 test_29.cc ../29_divide_two_integers/Solution29.cc)
add_executable(run_test_30 test_30.cc ../30_substring_with_concatenation_of_all_words/Solution30.cc)

target_link_libraries(run_test_1 gtest gtest_main)
target_link_libraries(run_test_2 gtest gtest_main)
target_link_libraries(run_test_3 gtest gtest_main)
target_link_libraries(run_test_4 gtest gtest_main)
target_link_libraries(run_test_5 gtest gtest_main)
target_link_libraries(run_test_5_dp gtest gtest_main)
target_link_libraries(run_test_6 gtest gtest_main)
target_link_libraries(run_test_7 gtest gtest_main)
target_link_libraries(run_test_8 gtest gtest_main)
target_link_libraries(run_test_9 gtest gtest_main)
target_link_libraries(run_test_10 gtest gtest_main)
target_link_libraries(run_test_11 gtest gtest_main)
target_link_libraries(run_test_12 gtest gtest_main)
target_link_libraries(run_test_13 gtest gtest_main)
target_link_libraries(run_test_14 gtest gtest_main)
target_link_libraries(run_test_15 gtest gtest_main)
target_link_libraries(run_test_16 gtest gtest_main)
target_link_libraries(run_test_17 gtest gtest_main)
target_link_libraries(run_test_18 gtest gtest_main)
target_link_libraries(run_test_19 gtest gtest_main)
target_link_libraries(run_test_20 gtest gtest_main)
target_link_libraries(run_test_21 gtest gtest_main)
target_link_libraries(run_test_22 gtest gtest_main)
target_link_libraries(run_test_23 gtest gtest_main)
target_link_libraries(run_test_24 gtest gtest_main)
target_link_libraries(run_test_25 gtest gtest_main)
target_link_libraries(run_test_26 gtest gtest_main)
target_link_libraries(run_test_27 gtest gtest_main)
target_link_libraries(run_test_28 gtest gtest_main)
target_link_libraries(run_test_29 gtest gtest_main)
target_link_libraries(run_test_30 gtest gtest_main)